[gd_scene load_steps=8 format=3 uid="uid://dm5fnhhhsp54m"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_8rasr"]
[ext_resource type="PackedScene" uid="uid://bux6jg8v62006" path="res://credit.tscn" id="2_58kwt"]
[ext_resource type="Texture2D" uid="uid://bgh6vsei817or" path="res://finns_banner.png" id="2_y2m7d"]
[ext_resource type="Texture2D" uid="uid://bt74fouxpvede" path="res://finns_studio.png" id="3_6ql65"]
[ext_resource type="PackedScene" uid="uid://bce251ilfs4i7" path="res://settings.tscn" id="4_ix6np"]

[sub_resource type="LabelSettings" id="LabelSettings_827c2"]
font_size = 150
outline_size = 25

[sub_resource type="Theme" id="Theme_3einr"]
Button/colors/font_hover_color = Color(0.764706, 0, 0.0862745, 1)
Button/colors/icon_normal_color = Color(0, 0, 1, 1)

[node name="main_menu" type="Node2D"]
script = ExtResource("1_8rasr")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(158, 536)
scale = Vector2(1.38972, 1.56695)
texture = ExtResource("2_y2m7d")

[node name="Label" type="Label" parent="."]
offset_left = 77.0
offset_top = 16.0
offset_right = 1322.0
offset_bottom = 221.0
scale = Vector2(1.45923, 1.25021)
text = "Drone Adventure"
label_settings = SubResource("LabelSettings_827c2")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="play" type="Button" parent="."]
offset_left = 803.0
offset_top = 438.0
offset_right = 1096.0
offset_bottom = 640.0
scale = Vector2(1.22893, 0.845984)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 142
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="finns_studio" type="Sprite2D" parent="."]
position = Vector2(172, 978)
scale = Vector2(0.96556, 1.03086)
texture = ExtResource("3_6ql65")
metadata/_edit_use_anchors_ = true

[node name="quit" type="Button" parent="."]
offset_left = 860.0
offset_top = 808.0
offset_right = 997.0
offset_bottom = 858.0
scale = Vector2(1.90032, 1.72781)
theme = SubResource("Theme_3einr")
theme_override_font_sizes/font_size = 30
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="help" type="Button" parent="."]
offset_left = 861.0
offset_top = 711.0
offset_right = 998.0
offset_bottom = 761.0
scale = Vector2(1.91612, 1.71842)
theme = SubResource("Theme_3einr")
theme_override_font_sizes/font_size = 30
text = "Help"
metadata/_edit_use_anchors_ = true

[node name="settings" type="Button" parent="."]
offset_left = 856.0
offset_top = 618.0
offset_right = 993.0
offset_bottom = 668.0
scale = Vector2(1.91612, 1.71842)
theme = SubResource("Theme_3einr")
theme_override_font_sizes/font_size = 30
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="Credit" parent="." instance=ExtResource("2_58kwt")]

[node name="SettingsScreen" parent="." instance=ExtResource("4_ix6np")]
visible = false

[connection signal="pressed" from="play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="help" to="." method="_on_info_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
